photo can automatically slide

--- a/index.html
+++ b/index.html
@@ -19,6 +19,47 @@ layout: default
                         <img src="/img/爱情公寓.jpg" alt="巅峰乐语路王力宏预告" width="700" height="320">
                       </a>
                   </li>
+                  <li id="aqgy" style="display: none;">
+                      <a href="">
+                        <img src="/img/DSC_2475.JPG" alt="巅峰乐语路王力宏预告" width="700" height="320">
+                      </a>
+                  </li>
+                  <li id="aqgy" style="display: none;">
+                      <a href="">
+                        <img src="/img/DSC_2948.JPG" alt="巅峰乐语路王力宏预告" width="700" height="320">
+                      </a>
+                  </li>
+                  <li id="wlh" style="display: none;">
+                      <a href="">
+                        <img src="http://imgcache.qq.com/music/common/product/focus_img/big0720150515234232.jpg" alt="巅峰乐语路王力宏预告" width="700" height="320">
+                      </a>
+                  </li>
+                  <li id="aqgy" style="display: none;">
+                      <a href="">
+                        <img src="/img/爱情公寓.jpg" alt="巅峰乐语路王力宏预告" width="700" height="320">
+                      </a>
+                  </li>
+                  <li id="aqgy" style="display: none;">
+                      <a href="">
+                        <img src="/img/DSC_2475.JPG" alt="巅峰乐语路王力宏预告" width="700" height="320">
+                      </a>
+                  </li>
+                  <li id="aqgy" style="display: none;">
+                      <a href="">
+                        <img src="/img/DSC_2948.JPG" alt="巅峰乐语路王力宏预告" width="700" height="320">
+                      </a>
+                  </li>
+                  <li id="wlh" style="display: none;">
+                      <a href="">
+                        <img src="http://imgcache.qq.com/music/common/product/focus_img/big0720150515234232.jpg" alt="巅峰乐语路王力宏预告" width="700" height="320">
+                      </a>
+                  </li>
+                  <li id="aqgy" style="display: none;">
+                      <a href="">
+                        <img src="/img/爱情公寓.jpg" alt="巅峰乐语路王力宏预告" width="700" height="320">
+                      </a>
+                  </li>
+
 
               </ul>
               
@@ -41,8 +82,8 @@ layout: default
 
 
               <div class="focus_switch">
-                  <a href="javascript:;" class="icon_prev"</a>
-                  <a href="javascript:;" class="icon_next"</a>
+                  <a href="javascript:;" class="icon_prev"></a>
+                  <a href="javascript:;" class="icon_next" onclick="test();"></a>
               </div>
               <ul class="mod_focus_list" id="thumb-photo">
                  <li class="">
