add lrc and song

--- a/home.html
+++ b/home.html
@@ -15,7 +15,7 @@
     <link href="http://cdn.bootcss.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="cover.css" rel="stylesheet">
+    <link href="./css/cover.css" rel="stylesheet">
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
@@ -79,3 +79,9 @@
     <script src="ie10-viewport-bug-workaround.js"></script>
   </body>
 </html>
+
+
+1.JavaScript高级程序设计（第3版）
+2.O'Reilly：Shell脚本学习指南
+3.CSS禅意花园（修订版）
+4.《苹果Mac OS Ⅹ 10.9 Mavericks高手真经（全新版）
