--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   			<div id="menu">
   				<ul>
   					<li class="active"><a href="#" accesskey="1" title="">Articles</a></li>
-  					<li><a href="photos" accesskey="2" title="">Photos</a></li>
+  					<li><a href="blog-photos" accesskey="2" title="">Photos</a></li>
   					<li><a href="#" accesskey="3" title="">Musics</a></li>
   					<li><a href="#" accesskey="4" title="">About Me</a></li>
   					<li><a href="#" accesskey="5" title="">Contact Me</a></li>
