--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
     <title>Pursue's blog</title>
-    <link href="/feed.xml" type="application/rss+xml" rel="alternate" title="Latest 10 blog posts (Pursue)" />
+    <link href="https://kkkkkxiaofei.github.io/feed.xml" type="application/rss+xml" rel="alternate" title="Latest 10 blog posts (Pursue)" />
     <link href="/css/default.css" rel="stylesheet" type="text/css" media="all" />
   </head>
   <body>
