--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   						</div>
   						<div class="article-body">
   							<h3>
-  								杂说VR
+  								不一样的视角，不一样的VR
   							</h3>
   							<p>
   								<span class="article-date">Jul 26, 2016</span>
